Add workflow version

--- a/.github/workflows/my_flow.yml
+++ b/.github/workflows/my_flow.yml
@@ -9,4 +9,4 @@ on:
   
 jobs:
   call-workflow:
-    uses: mbarbet-fft/reusable_workflow/.github/workflows/reusable_worflow.yml
+    uses: mbarbet-fft/reusable_workflow/.github/workflows/reusable_worflow.yml@v1
